# TotalReCAL

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  config.toml.example  debug_test_4.py  debug_test_ics.py  direct_test.py  docker-compose.yml  pyproject.toml  requirements.txt  run_deduplicator.py  run_tests.py  test_deduplication.py  test_endpoints.py
app/: __init__.py  fetcher.py  filters.py  generator.py  main.py  models.py  storage.py
app/templates/: base.html  events.html  index.html  output_form.html  outputs.html  rule_form.html  rules.html  source_form.html  sources.html
data1/: config.toml  hidden.json
data1/sources/: src1.ics  src2.ics
data1/store/: src1.ics  src2.ics
data2/: config.toml
data2/sources/: dep_feed.ics
data2/store/: dep_feed.ics
data3/: config.toml
data3/sources/: from_1.ics  from_2.ics
icalarchive/: __init__.py  __main__.py  app.py  config.py  fetcher.py  filters.py  scheduler.py  series.py  storage.py
icalarchive/templates/: base.html  calendar.html  dashboard.html  events.html  outputs.html  rules.html  series.html  series_detail.html  series_manage.html  sources.html
test_calendars/: cal1.ics  cal2.ics
