[project]
name = "icalarchive"
version = "0.1.0"
description = "Subscribe to external iCal feeds and accumulate events permanently"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "apscheduler>=3.10.0",
    "icalendar>=5.0.0",
    "recurring-ical-events>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["icalarchive"]

[tool.setuptools.package-data]
icalarchive = ["templates/*", "static/*"]
